# Learning

ApplicationManager/: CMakeLists.txt  am-config.yaml  build.sh  run.sh
ApplicationManager/ui-home/: CMakeLists.txt  main.cpp
ApplicationManager/ui-home/Qml/: CenterDisplay.qml  main.qml  qmldir
AttachedProperty/: CMakeLists.txt  README.md  main.cpp  main.qml
AttachedProperty/School/: CMakeLists.txt  Location.cpp  Location.h  Student.cpp  Student.h
Backtrac/: backtraceSample.c  main  main.cpp
Backtrac/Utils/: Terminate.cpp  demo
C++/: CMakeLists.txt  main  main.cpp
C++/TaskManager/: TaskManager.cpp  TaskManager.h
CMake/Install/: CMakeLists.txt  content.txt  main.cpp
CMake/Link_libraries/: CMakeLists.txt  main.cpp
CMake/Link_libraries/Demo/: CMakeLists.txt  DemoHeader.cpp
Conditional_variable/: CMakeLists.txt  main.cpp
Coredump/: check  file2.txt  main  main.cpp
Linux/: demo.sh  func.txt
Logger/: CMakeLists.txt  main.cpp
Logger/Logger/: CMakeLists.txt
Logger/Logger/Headers/: CoreDumpHandler.h  LogRecord.h  LogSink.h  Logger.h
Logger/Logger/Sources/: ConsoleSink.cpp  ConsoleSink.h  CoreDumpHandler.cpp  Logger.cpp
MultiProcess/: CMakeLists.txt  main  main.cpp  threads.cpp
Pipe/: CMakeLists.txt  demo.txt  main.cpp
Pipe/CheckPID/temp/: abc
QML/: CMakeLists.txt  demoscript.sh  main  main.cpp  test.qml
QML/HMI/: CMakeLists.txt  Inc.qml  abc.sh  demo.cmake  service.cpp  service.h
QmlLint/: .qmllint.ini  CMakeLists.txt  HMI.qrc  main.cpp  qmlLint.pro
QmlLint/QML/: main.qml
RasterWindow/: CMakeLists.txt  main.cpp  main.qml  raster.cpp  raster.h
RasterWindow/CustomQMl/: CMakeLists.txt  WindowCustom.cpp  WindowCustom.h
RasterWindow/Feature/: CMakeLists.txt  extend.h
SystemD/: CMakeLists.txt  defines.h  main.cpp
